syntax = "proto3";

package io.mystore.shipping.action;

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/mystore/shipping/entity/ship_order_entity.proto";

option java_outer_classname = "ShipOrderToShipOrderItemActionService";

service ShipOrderToShipOrderItem {
  option (akkaserverless.codegen) = {
    action: {}
  };

  rpc OnShipOrderCreated(entity.ShipOrderCreated) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ship_order"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ship_order"
    };
  }
}
